Add audio elements for game sounds
Added audio elements for spin and win sounds.

--- a/index.html
+++ b/index.html
@@ -26,6 +26,11 @@
       <p>© 2026 TotalCasino Clone</p>
     </footer>
   </div>
+
+  <!-- Dźwięki -->
+  <audio id="spinSound" src="assets/sounds/spin.mp3"></audio>
+  <audio id="winSound" src="assets/sounds/win.mp3"></audio>
+
   <script src="script.js"></script>
 </body>
 </html>
