--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>TotalCasino Clone</title>
+  <title>CocoCasino test </title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="casino-container">
     <header>
-      <h1>TotalCasino Clone 🎰</h1>
+      <h1>CocoCasino test  🎰</h1>
     </header>
 
     <main>
@@ -23,7 +23,7 @@
     </main>
 
     <footer>
-      <p>© 2026 TotalCasino Clone</p>
+      <p>© 2026 CocoCasino Prawa zastrzeżone  </p>
     </footer>
   </div>
 
