--- a/roulette.html
+++ b/roulette.html
@@ -1,1 +1,25 @@
+<!DOCTYPE html>
+<html lang="pl">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Ruletka - TotalCasino Clone</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <div class="casino-container">
+    <header>
+      <h1>Ruletka 🎡</h1>
+      <a href="index.html" class="back-btn">⬅ Powrót</a>
+    </header>
 
+    <main>
+      <p>Tu będzie Twoja ruletka. Można kliknąć “SPIN” i wygenerować losowy numer 0-36.</p>
+      <button id="rouletteSpin">SPIN</button>
+      <p id="rouletteResult"></p>
+    </main>
+  </div>
+
+  <script src="script-roulette.js"></script>
+</body>
+</html>
