Add roulette ball to the roulette wheel
Added a roulette ball element inside the roulette wheel.

--- a/roulette.html
+++ b/roulette.html
@@ -17,9 +17,10 @@
 
     <main>
 
-      <!-- KOŁO RULETKI -->
       <div class="roulette-wrapper">
-        <div class="roulette-wheel" id="wheel">🎡</div>
+        <div class="roulette-wheel" id="wheel">
+          <div class="roulette-ball" id="ball"></div>
+        </div>
       </div>
 
       <button id="rouletteSpin">SPIN</button>
