--- a/roulette.html
+++ b/roulette.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Ruletka Online</title>
+<title>Ruletka Realistyczna</title>
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
