--- a/slots.html
+++ b/slots.html
@@ -1,32 +1,21 @@
 <!DOCTYPE html>
 <html lang="pl">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Slots - TotalCasino Clone</title>
-  <link rel="stylesheet" href="style.css">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Slots</title>
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="casino-container">
-    <header>
-      <h1>Slots 🎰</h1>
-      <a href="index.html" class="back-btn">⬅ Powrót</a>
-    </header>
-
-    <main>
-      <div class="slot-machine">
-        <div class="reel" id="reel1">🍒</div>
-        <div class="reel" id="reel2">🍋</div>
-        <div class="reel" id="reel3">🔔</div>
-      </div>
-      <button id="spinBtn">SPIN</button>
-      <p id="result"></p>
-    </main>
-  </div>
-
-  <audio id="spinSound" src="assets/sounds/spin.mp3"></audio>
-  <audio id="winSound" src="assets/sounds/win.mp3"></audio>
-
-  <script src="script-slots.js"></script>
+<div class="casino-container">
+  <header>
+    <h1>Slots 🎰</h1>
+    <a href="index.html" class="back-btn">⬅ Powrót</a>
+  </header>
+  <main>
+    <p>Tu będzie Twoja gra w slots – placeholder.</p>
+  </main>
+</div>
+<script src="slots.js"></script>
 </body>
 </html>
