--- a/roulette.html
+++ b/roulette.html
@@ -4,9 +4,10 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Ruletka Realistyczna</title>
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="style-roulette.css">
 </head>
 <body>
+
 <div class="casino-container">
 
 <header>
@@ -16,6 +17,7 @@
 </header>
 
 <main>
+
   <!-- KOŁO RULETKI -->
   <div class="roulette-wrapper">
     <canvas id="rouletteCanvas" width="400" height="400"></canvas>
@@ -35,9 +37,11 @@
   <!-- SPIN -->
   <button id="rouletteSpin">SPIN</button>
   <p id="rouletteResult"></p>
+
 </main>
 
 </div>
+
 <script src="roulette.js"></script>
 </body>
 </html>
