--- a/roulette.html
+++ b/roulette.html
@@ -21,6 +21,7 @@
   <!-- KOŁO RULETKI -->
   <div class="roulette-wrapper">
     <canvas id="rouletteCanvas" width="400" height="400"></canvas>
+    <div id="rouletteBall"></div>
   </div>
 
   <!-- STOŁ OBSTAWIANIA KOLORÓW -->
