--- a/slots.html
+++ b/slots.html
@@ -10,26 +10,28 @@
 
 <div class="casino-container">
 
-<header>
-  <h1>Slots 🎰</h1>
-  <a href="index.html" class="back-btn">⬅ Powrót</a>
-  <p>Saldo: $<span id="balance">1000</span></p>
-</header>
-
-<main>
-
-  <!-- Bębny -->
-  <div class="slots-wrapper">
-    <div class="reel" id="reel1">🍒</div>
-    <div class="reel" id="reel2">🍋</div>
-    <div class="reel" id="reel3">🔔</div>
+  <!-- PASEK GRACZA -->
+  <div class="player-bar">
+    <span id="playerName">Gracz1</span> • Saldo: $<span id="balance">1000</span>
   </div>
 
-  <!-- Przycisk SPIN -->
-  <button id="slotsSpin">SPIN</button>
-  <p id="slotsResult"></p>
+  <header>
+    <h1>Slots 🎰</h1>
+    <a href="index.html" class="back-btn">⬅ Powrót</a>
+  </header>
 
-</main>
+  <main>
+
+    <div class="slots-wrapper">
+      <div class="reel" id="reel1">🍒</div>
+      <div class="reel" id="reel2">🍋</div>
+      <div class="reel" id="reel3">🔔</div>
+    </div>
+
+    <button id="slotsSpin">SPIN</button>
+    <p id="slotsResult"></p>
+
+  </main>
 
 </div>
 
