--- a/roulette.html
+++ b/roulette.html
@@ -10,32 +10,40 @@
 
 <div class="casino-container">
 
-<header>
-  <h1>Ruletka 🎡</h1>
-  <a href="index.html" class="back-btn">⬅ Powrót</a>
-  <p>Saldo: $<span id="balance">1000</span></p>
-</header>
-
-<main>
-
-  <div class="roulette-wrapper">
-    <canvas id="rouletteCanvas" width="400" height="400"></canvas>
-    <div id="rouletteBall"></div>
+  <!-- PASEK GRACZA -->
+  <div class="player-bar">
+    <span id="playerName">Gracz1</span> • Saldo: $<span id="balance">1000</span>
   </div>
 
-  <div class="bet-options">
-    <p>Obstaw kolory:</p>
-    <button class="bet-btn" data-bet="red">🔴 Czerwone</button>
-    <button class="bet-btn" data-bet="black">⚫ Czarne</button>
-    <button class="bet-btn" data-bet="green">🟢 Zielone</button>
-  </div>
+  <header>
+    <h1>Ruletka 🎡</h1>
+    <a href="index.html" class="back-btn">⬅ Powrót</a>
+  </header>
 
-  <div class="numbers-grid" id="numbersGrid"></div>
+  <main>
 
-  <button id="rouletteSpin">SPIN</button>
-  <p id="rouletteResult"></p>
+    <!-- Koło Ruletki -->
+    <div class="roulette-wrapper">
+      <canvas id="rouletteCanvas" width="400" height="400"></canvas>
+      <div id="rouletteBall"></div>
+    </div>
 
-</main>
+    <!-- Obstawianie kolorów -->
+    <div class="bet-options">
+      <p>Obstaw kolory:</p>
+      <button class="bet-btn" data-bet="red">🔴 Czerwone</button>
+      <button class="bet-btn" data-bet="black">⚫ Czarne</button>
+      <button class="bet-btn" data-bet="green">🟢 Zielone</button>
+    </div>
+
+    <!-- Obstawianie numerków -->
+    <div class="numbers-grid" id="numbersGrid"></div>
+
+    <!-- SPIN -->
+    <button id="rouletteSpin">SPIN</button>
+    <p id="rouletteResult"></p>
+
+  </main>
 
 </div>
 
