--- a/slots.html
+++ b/slots.html
@@ -10,7 +10,7 @@
 
 <div class="casino-container">
 
-  <!-- PASEK GRACZA -->
+  <!-- Pasek gracza -->
   <div class="player-bar">
     <span id="playerName">Gracz1</span> • Saldo: $<span id="balance">1000</span>
   </div>
@@ -22,12 +22,14 @@
 
   <main>
 
+    <!-- Bębny -->
     <div class="slots-wrapper">
       <div class="reel" id="reel1">🍒</div>
       <div class="reel" id="reel2">🍋</div>
       <div class="reel" id="reel3">🔔</div>
     </div>
 
+    <!-- Spin -->
     <button id="slotsSpin">SPIN</button>
     <p id="slotsResult"></p>
 
