--- a/roulette.html
+++ b/roulette.html
@@ -10,7 +10,7 @@
 
 <div class="casino-container">
 
-  <!-- PASEK GRACZA -->
+  <!-- Pasek gracza -->
   <div class="player-bar">
     <span id="playerName">Gracz1</span> • Saldo: $<span id="balance">1000</span>
   </div>
@@ -22,13 +22,11 @@
 
   <main>
 
-    <!-- Koło Ruletki -->
     <div class="roulette-wrapper">
       <canvas id="rouletteCanvas" width="400" height="400"></canvas>
       <div id="rouletteBall"></div>
     </div>
 
-    <!-- Obstawianie kolorów -->
     <div class="bet-options">
       <p>Obstaw kolory:</p>
       <button class="bet-btn" data-bet="red">🔴 Czerwone</button>
@@ -36,10 +34,8 @@
       <button class="bet-btn" data-bet="green">🟢 Zielone</button>
     </div>
 
-    <!-- Obstawianie numerków -->
     <div class="numbers-grid" id="numbersGrid"></div>
 
-    <!-- SPIN -->
     <button id="rouletteSpin">SPIN</button>
     <p id="rouletteResult"></p>
 
