--- a/slots.html
+++ b/slots.html
@@ -11,8 +11,8 @@
 <div class="casino-container">
 
   <!-- Pasek gracza -->
-  <div class="player-bar">
-    <span id="playerName">Gracz1</span> • Saldo: $<span id="balance">1000</span>
+  <div class="player-bar" id="playerBar">
+    <span id="playerNameDisplay"></span> • Saldo: $<span id="playerBalance">0</span>
   </div>
 
   <header>
@@ -22,14 +22,12 @@
 
   <main>
 
-    <!-- Bębny -->
     <div class="slots-wrapper">
       <div class="reel" id="reel1">🍒</div>
       <div class="reel" id="reel2">🍋</div>
       <div class="reel" id="reel3">🔔</div>
     </div>
 
-    <!-- Spin -->
     <button id="slotsSpin">SPIN</button>
     <p id="slotsResult"></p>
 
