--- a/roulette.html
+++ b/roulette.html
@@ -10,9 +10,8 @@
 
 <div class="casino-container">
 
-  <!-- Pasek gracza -->
-  <div class="player-bar">
-    <span id="playerName">Gracz1</span> • Saldo: $<span id="balance">1000</span>
+  <div class="player-bar" id="playerBar">
+    <span id="playerNameDisplay"></span> • Saldo: $<span id="playerBalance">0</span>
   </div>
 
   <header>
@@ -46,3 +45,4 @@
 <script src="roulette.js"></script>
 </body>
 </html>
+
