--- a/index.html
+++ b/index.html
@@ -3,96 +3,69 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>CoCoCasino</title>
-<link rel="stylesheet" href="style-main.css">
+<title>CoCoCasino 🎰</title>
+<link rel="stylesheet" href="style-global.css">
 </head>
 <body>
 
-<div class="casino-container">
-
-  <!-- Pasek gracza -->
-  <div class="player-bar" id="playerBar" style="display:none;">
+<header class="casino-header">
+  <div class="casino-menu">
+    <a href="index.html">🏠 Menu</a>
+    <a href="slots.html">🎰 Slots</a>
+    <a href="roulette.html">🎡 Ruletka</a>
+  </div>
+  <div class="player-bar" id="playerBar">
     <span id="playerNameDisplay"></span> • Saldo: $<span id="playerBalance">0</span>
   </div>
+</header>
 
-  <header>
-    <h1>CoCoCasino 🎰</h1>
-  </header>
+<main>
+  <h1>Witaj w CoCoCasino!</h1>
 
-  <!-- Logowanie -->
-  <main id="loginSection">
-    <div class="login-box">
-      <h2>Logowanie</h2>
-      <input type="text" id="playerNameInput" placeholder="Wpisz swoją nazwę">
-      <button id="loginBtn">Zaloguj</button>
-    </div>
-  </main>
+  <div class="login-section">
+    <label>Nazwa gracza:</label>
+    <input type="text" id="playerNameInput" placeholder="Twoja nazwa">
+    <button id="loginBtn">Zaloguj / Ustaw nazwę</button>
+  </div>
 
-  <!-- Menu gry -->
-  <main id="casinoMenu" style="display:none;">
-    <div class="deposit-box">
-      <h2>Wpłać środki</h2>
-      <input type="number" id="depositAmount" placeholder="Kwota">
-      <button id="depositBtn">Wpłać</button>
-    </div>
+  <div class="deposit-section">
+    <label>Wpłać pieniądze:</label>
+    <input type="number" id="depositAmount" placeholder="Kwota">
+    <button id="depositBtn">Wpłać</button>
+  </div>
 
-    <h2>Wybierz grę:</h2>
-    <div class="game-icons">
-      <a href="slots.html">
-        <img src="./assets/images/slot-icon.png" alt="Slots">
-        <p>Slots</p>
-      </a>
-      <a href="roulette.html">
-        <img src="./assets/images/roulette-icon.png" alt="Ruletka">
-        <p>Ruletka</p>
-      </a>
-    </div>
-  </main>
+  <p>Po zalogowaniu możesz grać w Slots i Ruletkę. Saldo i nazwa będą widoczne wszędzie.</p>
+</main>
 
-</div>
+<footer class="casino-footer">
+  <div class="social-icons">
+    <a href="https://discord.gg/twoj_link" target="_blank"><img src="assets/icons/discord.png" alt="Discord"></a>
+    <a href="https://instagram.com/twoj_profil" target="_blank"><img src="assets/icons/instagram.png" alt="Instagram"></a>
+    <a href="https://facebook.com/twoj_profil" target="_blank"><img src="assets/icons/facebook.png" alt="Facebook"></a>
+    <a href="https://youtube.com/twoj_kanal" target="_blank"><img src="assets/icons/youtube.png" alt="YouTube"></a>
+  </div>
+  <p>© 2026 CoCoCasino. Hazard związany jest z ryzykiem, a udział w nielegalnych grach hazardowych jest niezgodny z polskim prawem.</p>
+</footer>
 
+<script src="player.js"></script>
 <script>
-let player = { name:"", balance:0 };
+  // Logowanie i wpłata
+  document.getElementById("loginBtn").addEventListener("click", ()=>{
+    let name = document.getElementById("playerNameInput").value.trim();
+    if(name==="") name="Gracz";
+    localStorage.setItem("playerName", name);
+    location.reload(); // odśwież, żeby pasek zaktualizował się wszędzie
+  });
 
-// Sprawdzenie czy gracz jest już zalogowany
-if(localStorage.getItem("playerName")){
-  player.name = localStorage.getItem("playerName");
-  player.balance = parseInt(localStorage.getItem("playerBalance"));
-  document.getElementById("playerNameDisplay").textContent = player.name;
-  document.getElementById("playerBalance").textContent = player.balance;
-  document.getElementById("loginSection").style.display = "none";
-  document.getElementById("casinoMenu").style.display = "block";
-  document.getElementById("playerBar").style.display = "block";
-}
-
-// Logowanie
-document.getElementById("loginBtn").addEventListener("click", ()=>{
-  const name = document.getElementById("playerNameInput").value.trim();
-  if(name === ""){ alert("Podaj nazwę gracza!"); return; }
-  player.name = name;
-  player.balance = 1000;
-
-  localStorage.setItem("playerName", player.name);
-  localStorage.setItem("playerBalance", player.balance);
-
-  document.getElementById("playerNameDisplay").textContent = player.name;
-  document.getElementById("playerBalance").textContent = player.balance;
-
-  document.getElementById("loginSection").style.display = "none";
-  document.getElementById("casinoMenu").style.display = "block";
-  document.getElementById("playerBar").style.display = "block";
-});
-
-// Wpłata
-document.getElementById("depositBtn").addEventListener("click", ()=>{
-  const amount = parseInt(document.getElementById("depositAmount").value);
-  if(isNaN(amount) || amount <=0){ alert("Podaj poprawną kwotę!"); return; }
-  player.balance += amount;
-  localStorage.setItem("playerBalance", player.balance);
-  document.getElementById("playerBalance").textContent = player.balance;
-  document.getElementById("depositAmount").value = "";
-  alert(`Wpłacono $${amount}`);
-});
+  document.getElementById("depositBtn").addEventListener("click", ()=>{
+    let amount = parseInt(document.getElementById("depositAmount").value);
+    if(!isNaN(amount) && amount>0){
+      if(window.updateBalance) updateBalance(amount);
+      alert(`Wpłacono $${amount}`);
+      document.getElementById("depositAmount").value="";
+    } else alert("Podaj poprawną kwotę");
+  });
 </script>
+
 </body>
 </html>
