--- a/slots.html
+++ b/slots.html
@@ -5,7 +5,13 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Slots 🎰</title>
 <link rel="stylesheet" href="style-global.css">
-<link rel="stylesheet" href="style-slots.css">
+<style>
+body { background: linear-gradient(135deg,#1a1a1a,#3a1a1a,#111); }
+main { text-align:center; padding:50px; }
+.slots-wrapper { display:flex; justify-content:center; gap:20px; margin:30px 0; font-size:50px; }
+button { padding:10px 20px; font-size:16px; border:none; border-radius:5px; background: gold; color:#000; cursor:pointer; transition:0.2s; }
+button:hover { transform: scale(1.05); }
+</style>
 </head>
 <body>
 
@@ -32,17 +38,26 @@
   <p id="slotsResult"></p>
 </main>
 
-<footer class="casino-footer">
-  <div class="social-icons">
-    <a href="https://discord.gg/twoj_link" target="_blank"><img src="assets/icons/discord.png" alt="Discord"></a>
-    <a href="https://instagram.com/twoj_profil" target="_blank"><img src="assets/icons/instagram.png" alt="Instagram"></a>
-    <a href="https://facebook.com/twoj_profil" target="_blank"><img src="assets/icons/facebook.png" alt="Facebook"></a>
-    <a href="https://youtube.com/twoj_kanal" target="_blank"><img src="assets/icons/youtube.png" alt="YouTube"></a>
-  </div>
-  <p>© 2026 CoCoCasino. Hazard związany jest z ryzykiem, a udział w nielegalnych grach hazardowych jest niezgodny z polskim prawem.</p>
-</footer>
+<footer class="casino-footer"></footer>
 
 <script src="player.js"></script>
-<script src="slots.js"></script>
+<script>
+const symbols = ["🍒","🍋","🔔","🍀","💎"];
+document.getElementById("slotsSpin").addEventListener("click", ()=>{
+  if(player.balance<10){ alert("Masz za mało środków!"); return; }
+  updateBalance(-10);
+  let results = [];
+  for(let i=1;i<=3;i++){
+    let sym = symbols[Math.floor(Math.random()*symbols.length)];
+    document.getElementById("reel"+i).textContent = sym;
+    results.push(sym);
+  }
+  if(results[0]===results[1] && results[1]===results[2]){
+    let win = 100;
+    updateBalance(win);
+    document.getElementById("slotsResult").textContent = `WYGRAŁEŚ $${win}!`;
+  } else document.getElementById("slotsResult").textContent = "Spróbuj ponownie!";
+});
+</script>
 </body>
 </html>
