--- a/slots.html
+++ b/slots.html
@@ -3,61 +3,19 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Slots 🎰</title>
-<link rel="stylesheet" href="style-global.css">
-<style>
-body { background: linear-gradient(135deg,#1a1a1a,#3a1a1a,#111); }
-main { text-align:center; padding:50px; }
-.slots-wrapper { display:flex; justify-content:center; gap:20px; margin:30px 0; font-size:50px; }
-button { padding:10px 20px; font-size:16px; border:none; border-radius:5px; background: gold; color:#000; cursor:pointer; transition:0.2s; }
-button:hover { transform: scale(1.05); }
-</style>
+<title>Slots</title>
+<link rel="stylesheet" href="style-slots.css">
 </head>
 <body>
-
-<header class="casino-header">
-  <div class="casino-menu">
-    <a href="index.html">🏠 Menu</a>
-    <a href="slots.html">🎰 Slots</a>
-    <a href="roulette.html">🎡 Ruletka</a>
-  </div>
-  <div class="player-bar" id="playerBar">
-    <span id="playerNameDisplay"></span> • Saldo: $<span id="playerBalance">0</span>
-  </div>
-</header>
-
-<main>
-  <h1>Slots 🎰</h1>
-  <div class="slots-wrapper">
-    <div class="reel" id="reel1">🍒</div>
-    <div class="reel" id="reel2">🍋</div>
-    <div class="reel" id="reel3">🔔</div>
-  </div>
-
-  <button id="slotsSpin">SPIN</button>
-  <p id="slotsResult"></p>
-</main>
-
-<footer class="casino-footer"></footer>
-
-<script src="player.js"></script>
-<script>
-const symbols = ["🍒","🍋","🔔","🍀","💎"];
-document.getElementById("slotsSpin").addEventListener("click", ()=>{
-  if(player.balance<10){ alert("Masz za mało środków!"); return; }
-  updateBalance(-10);
-  let results = [];
-  for(let i=1;i<=3;i++){
-    let sym = symbols[Math.floor(Math.random()*symbols.length)];
-    document.getElementById("reel"+i).textContent = sym;
-    results.push(sym);
-  }
-  if(results[0]===results[1] && results[1]===results[2]){
-    let win = 100;
-    updateBalance(win);
-    document.getElementById("slotsResult").textContent = `WYGRAŁEŚ $${win}!`;
-  } else document.getElementById("slotsResult").textContent = "Spróbuj ponownie!";
-});
-</script>
+<div class="casino-container">
+  <header>
+    <h1>Slots 🎰</h1>
+    <a href="index.html" class="back-btn">⬅ Powrót</a>
+  </header>
+  <main>
+    <p>Tu będzie Twoja gra w slots – placeholder.</p>
+  </main>
+</div>
+<script src="slots.js"></script>
 </body>
 </html>
