--- a/index.html
+++ b/index.html
@@ -1,34 +1,91 @@
 <!DOCTYPE html>
 <html lang="pl">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>TotalCasino</title>
-
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>TotalCasino</title>
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
 
-<header class="header">
-  <div class="logo">TotalCasino</div>
+  <!-- 🔝 NAVBAR -->
+  <header class="navbar">
+    <div class="logo">TotalCasino</div>
 
-  <nav class="nav">
-    <a class="active">Strona główna</a>
-    <a>Promocje</a>
-    <a>Kasyno na żywo</a>
-    <a>Turnieje</a>
-    <a>Klub VIP</a>
-    <a>TOP wygrane</a>
-    <a>Pomoc</a>
-    <a>Graj odpowiedzialnie</a>
-  </nav>
+    <nav class="menu">
+      <a href="#" class="active">Strona główna</a>
+      <a href="#">Promocje</a>
+      <a href="#">Kasyno na żywo</a>
+      <a href="#">Turnieje</a>
+      <a href="#">Pomoc</a>
+    </nav>
 
-  <div class="auth">
-    <button class="btn-login">Zaloguj się</button>
-    <button class="btn-register">Zarejestruj się</button>
-  </div>
-</header>
+    <div class="auth">
+      <button class="login">Zaloguj się</button>
+      <button class="register">Zarejestruj się</button>
+    </div>
+  </header>
+
+  <!-- 🎰 HERO -->
+  <section class="hero">
+    <div class="hero-content">
+      <h1>Witaj w świecie Total Casino!</h1>
+      <p>Odbierz do 2500 zł i 150 Free Spins na start</p>
+      <button class="primary">Sprawdź</button>
+    </div>
+  </section>
+
+  <!-- 🔎 FILTRY -->
+  <section class="filters">
+    <div class="left">
+      <button class="filter-btn">KATEGORIE</button>
+      <button class="filter-btn">WYBIERZ DOSTAWCĘ</button>
+    </div>
+
+    <div class="right">
+      <input type="text" placeholder="Szukaj" />
+      <button class="random">Losowa gra</button>
+    </div>
+  </section>
+
+  <!-- 🎮 GRID GIER -->
+  <section class="games">
+    <h2>Popularne</h2>
+
+    <div class="games-grid">
+      <div class="game-card"><img src="https://picsum.photos/200/200?1"></div>
+      <div class="game-card"><img src="https://picsum.photos/200/200?2"></div>
+      <div class="game-card"><img src="https://picsum.photos/200/200?3"></div>
+      <div class="game-card"><img src="https://picsum.photos/200/200?4"></div>
+      <div class="game-card"><img src="https://picsum.photos/200/200?5"></div>
+      <div class="game-card"><img src="https://picsum.photos/200/200?6"></div>
+      <div class="game-card"><img src="https://picsum.photos/200/200?7"></div>
+      <div class="game-card"><img src="https://picsum.photos/200/200?8"></div>
+    </div>
+  </section>
+
+  <!-- 🔻 FOOTER -->
+  <footer class="footer">
+    <div class="footer-grid">
+      <div>
+        <h4>Pobierz aplikację</h4>
+        <button class="store">Android</button>
+        <button class="store">App Store</button>
+      </div>
+
+      <div>
+        <h4>Dostawcy</h4>
+        <p>Playtech</p>
+        <p>Pragmatic</p>
+        <p>Quickspin</p>
+      </div>
+
+      <div>
+        <h4>Metody płatności</h4>
+        <p>Visa • Skrill • Blik</p>
+      </div>
+    </div>
+  </footer>
 
 </body>
 </html>
