--- a/index.html
+++ b/index.html
@@ -1,25 +1,27 @@
 <!DOCTYPE html>
 <html lang="pl">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>TotalCasino</title>
-  <link rel="stylesheet" href="styles.css" />
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>CoCoCasino 🎰</title>
+<link rel="stylesheet" href="style-global.css">
+<style>
+body { background: url('assets/images/menu-bg.jpg') no-repeat center center/cover; }
+main { padding: 50px; text-align: center; }
+.login-section, .deposit-section { margin:20px 0; }
+.login-section input, .deposit-section input { padding:8px 12px; margin-right:10px; border-radius:5px; border:none; }
+.login-section button, .deposit-section button { padding:8px 15px; border-radius:5px; border:none; background: gold; color:#000; font-weight:bold; cursor:pointer; transition:0.2s; }
+.login-section button:hover, .deposit-section button:hover { transform:scale(1.05); }
+</style>
 </head>
 <body>
 
-  <!-- 🔝 NAVBAR -->
-  <header class="navbar">
-    <div class="logo">TotalCasino</div>
-
-    <nav class="menu">
-      <a href="#" class="active">Strona główna</a>
-      <a href="#">Promocje</a>
-      <a href="#">Kasyno na żywo</a>
-      <a href="#">Turnieje</a>
-      <a href="#">Pomoc</a>
-    </nav>
- </div>
+<header class="casino-header">
+  <div class="casino-menu">
+    <a href="index.html">🏠 Menu</a>
+    <a href="slots.html">🎰 Slots</a>
+    <a href="roulette.html">🎡 Ruletka</a>
+  </div>
   <div class="player-bar" id="playerBar">
     <span id="playerNameDisplay"></span> • Saldo: $<span id="playerBalance">0</span>
   </div>
@@ -39,7 +41,19 @@
     <input type="number" id="depositAmount" placeholder="Kwota">
     <button id="depositBtn">Wpłać</button>
   </div>
-<footer class="casino-footer"></footer>
+
+  <p>Po zalogowaniu możesz grać w Slots i Ruletkę. Saldo i nazwa będą widoczne wszędzie.</p>
+</main>
+
+<footer class="casino-footer">
+  <div class="social-icons">
+    <a href="https://discord.gg/twoj_link" target="_blank"><img src="assets/icons/discord.png" alt="Discord"></a>
+    <a href="https://instagram.com/twoj_profil" target="_blank"><img src="assets/icons/instagram.png" alt="Instagram"></a>
+    <a href="https://facebook.com/twoj_profil" target="_blank"><img src="assets/icons/facebook.png" alt="Facebook"></a>
+    <a href="https://youtube.com/twoj_kanal" target="_blank"><img src="assets/icons/youtube.png" alt="YouTube"></a>
+  </div>
+  <p>© 2026 CoCoCasino. Hazard związany jest z ryzykiem, a udział w nielegalnych grach hazardowych jest niezgodny z polskim prawem.</p>
+</footer>
 
 <script src="player.js"></script>
 <script>
@@ -59,67 +73,5 @@
     } else alert("Podaj poprawną kwotę");
   });
 </script>
-</body>
-</html>
-  <!-- 🎰 HERO -->
-  <section class="hero">
-    <div class="hero-content">
-      <p>Odbierz do 2500 zł i 150 Free Spins na start</p>
-      <button class="primary">Sprawdź</button>
-    </div>
-  </section>
-
-  <!-- 🔎 FILTRY -->
-  <section class="filters">
-    <div class="left">
-      <button class="filter-btn">KATEGORIE</button>
-      <button class="filter-btn">WYBIERZ DOSTAWCĘ</button>
-    </div>
-
-    <div class="right">
-      <input type="text" placeholder="Szukaj" />
-      <button class="random">Losowa gra</button>
-    </div>
-  </section>
-
-  <!-- 🎮 GRID GIER -->
-  <section class="games">
-    <h2>Popularne</h2>
-
-    <div class="games-grid">
-      <div class="game-card"><img src="https:///200/200?1"></div>
-      <div class="game-card"><img src="https:///200/200?2"></div>
-      <div class="game-card"><img src="https:///200/200?3"></div>
-      <div class="game-card"><img src="https:///200/200?4"></div>
-      <div class="game-card"><img src="https:///200/200?5"></div>
-      <div class="game-card"><img src="https:///200/200?6"></div>
-      <div class="game-card"><img src="https:///200/200?7"></div>
-      <div class="game-card"><img src="https:///200/200?8"></div>
-    </div>
-  </section>
-
-  <!-- 🔻 FOOTER -->
-  <footer class="footer">
-    <div class="footer-grid">
-      <div>
-        <h4>Pobierz aplikację</h4>
-        <button class="store">Android</button>
-        <button class="store">App Store</button>
-      </div>
-
-      <div>
-        <h4>Dostawcy</h4>
-        <p>Playtech</p>
-        <p>Pragmatic</p>
-        <p>Quickspin</p>
-      </div>
-
-      <div>
-        <h4>Metody płatności</h4>
-        <p>Visa • Skrill • Blik</p>
-      </div>
-    </div>
-  </footer>
-
 </body>
 </html>
